# kdedtester

./: AUTHORS  Doxyfile  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.in  configure.in.in  kdedtester.kdevelop  kdedtester.kdevelop.pcs  kdedtester.kdevses
admin/: acinclude.m4.in
autom4te.cache/: output.0  requests  traces.0
po/: Makefile.in
src/: Makefile.am  Makefile.in  fakekded.cpp  kdedtester.lsm  main.cpp
templates/: cpp
